change detail and example
change detail and more example

--- a/index.html
+++ b/index.html
@@ -48,67 +48,67 @@
     <table border="1">
       <tr>
         <td><label for="goal">1. Goal: กำหนดเป้าหมายให้ชัดเจน</label></td>
-        <td><textarea rows="4" id="goal" placeholder="เริ่มจากตั้งคำถามให้เฉียบ!..."></textarea></td>
+        <td><textarea rows="4" id="goal" placeholder="เริ่มจากตั้งคำถามให้เฉียบ! บอกให้ชัดว่าคุณอยากได้อะไร เช่น “ช่วยสรุปบทความให้เข้าใจง่ายใน 5 ประเด็น”"></textarea></td>
       </tr>
       <tr>
         <td><label for="format">2. Format: ระบุรูปแบบคำตอบ</label></td>
-        <td><textarea rows="4" id="format" placeholder="อยากได้ลิสต์ แบบบทความ หรือพูดเหมือนเล่า..."></textarea></td>
+        <td><textarea rows="4" id="format" placeholder="อยากได้ลิสต์ แบบบทความ หรือพูดเหมือนเล่าให้เพื่อนฟัง? บอกไปเลย เช่น “ตอบเป็น bullet 3 ข้อ” หรือ “เขียนแบบบทบรรยาย”"></textarea></td>
       </tr>
       <tr>
         <td><label for="role">3. Role: มอบบทบาทให้ระบบ</label></td>
-        <td><textarea rows="4" id="role" placeholder="ให้ AI รับบทบาทเหมือนคน..."></textarea></td>
+        <td><textarea rows="4" id="role" placeholder="ให้ AI รับบทบาทเหมือนคน เช่น “คุณคือครูภาษาไทยระดับมัธยม” หรือ “เป็นที่ปรึกษาด้านสุขภาพ”"></textarea></td>
       </tr>
       <tr>
         <td><label for="audience">4. Audience: ระบุกลุ่มเป้าหมาย</label></td>
-        <td><textarea rows="4" id="audience" placeholder="คำตอบสำหรับเด็ก ป.6 กับนักวิจัย..."></textarea></td>
+        <td><textarea rows="4" id="audience" placeholder="คำตอบสำหรับเด็ก ป.6 กับนักวิจัยระดับปริญญาเอกมันต่างกัน! ถ้าระบุกลุ่มเป้าหมาย เช่น “อธิบายให้แม่บ้านเข้าใจ”"></textarea></td>
       </tr>
       <tr>
         <td><label for="context">5. Context: ให้ข้อมูลพื้นหลัง</label></td>
-        <td><textarea rows="4" id="context" placeholder="AI ไม่ใช่นักอ่านใจ..."></textarea></td>
+        <td><textarea rows="4" id="context" placeholder="AI ไม่ใช่นักอ่านใจ บอกบริบทไปเถอะ เช่น “ฉันทำธุรกิจร้านกาแฟในกรุงเทพฯ อยากได้แผนการตลาด”"></textarea></td>
       </tr>
       <tr>
         <td><label for="constraint">6. Constraint: กำหนดข้อจำกัด</label></td>
-        <td><textarea rows="4" id="constraint" placeholder="ใส่กรอบให้ระบบคิด..."></textarea></td>
+        <td><textarea rows="4" id="constraint" placeholder="ใส่กรอบให้ระบบคิด เช่น “ตอบในไม่เกิน 100 คำ” หรือ “ห้ามใช้ศัพท์เฉพาะ”"></textarea></td>
       </tr>
       <tr>
         <td><label for="clarity">7. Clarity: ใช้ภาษาชัดเจน</label></td>
-        <td><textarea rows="4" id="clarity" placeholder="ถามยังไงได้อย่างนั้น!..."></textarea></td>
+        <td><textarea rows="4" id="clarity" placeholder="ถามยังไงได้อย่างนั้น! หลีกเลี่ยงคำกำกวม เช่น “ช่วยแนะนำหน่อย” (แนะนำอะไร?) เปลี่ยนเป็น “ช่วยแนะนำหนังสือธุรกิจที่อ่านง่ายสำหรับผู้เริ่มต้น”"></textarea></td>
       </tr>
       <tr>
         <td><label for="example">8. Example: ยกตัวอย่างประกอบ</label></td>
-        <td><textarea rows="4" id="example" placeholder="ลองแนบตัวอย่างไปด้วย..."></textarea></td>
+        <td><textarea rows="4" id="example" placeholder="ลองแนบตัวอย่างไปด้วย เช่น “ตอบแบบนี้: 1. เนื้อหา 2. จุดเด่น 3. คำแนะนำ” ระบบจะจับสไตล์คุณได้ง่ายขึ้นเยอะ"></textarea></td>
       </tr>
       <tr>
         <td><label for="tone">9. Tone: กำหนดโทนเสียง</label></td>
-        <td><textarea rows="4" id="tone" placeholder="อยากให้ฟังเป็นทางการ หรือฮา ๆ..."></textarea></td>
+        <td><textarea rows="4" id="tone" placeholder="อยากให้ฟังเป็นทางการ เป็นกันเอง หรือฮา ๆ ก็สั่งได้ เช่น “ใช้โทนเหมือนเพื่อนเล่าให้ฟัง” หรือ “ตอบแบบมืออาชีพในการประชุม”"></textarea></td>
       </tr>
       <tr>
         <td><label for="step">10. Step-by-step: ขอคำอธิบายเป็นขั้นตอน</label></td>
-        <td><textarea rows="4" id="step" placeholder="ช่วยเขียนเป็นขั้นตอนแบบ Step-by-Step..."></textarea></td>
+        <td><textarea rows="4" id="step" placeholder="ถ้าเรื่องมันซับซ้อน เช่น “อธิบายวิธีสมัครขอทุนวิจัย” ลองสั่งว่า “ช่วยเขียนเป็นขั้นตอนแบบ Step-by-Step” คำตอบจะชัด เข้าใจง่าย ไม่หลงทาง"></textarea></td>
       </tr>
       <tr>
         <td><label for="creativity">11. Creativity: เปิดพื้นที่ให้คิดสร้างสรรค์</label></td>
-        <td><textarea rows="4" id="creativity" placeholder="เสนอไอเดียคอนเทนต์ใหม่..."></textarea></td>
+        <td><textarea rows="4" id="creativity" placeholder="ถามแบบเปิด เช่น “เสนอไอเดียคอนเทนต์ใหม่สำหรับเพจสุขภาพ” หรือ “คิดคอนเซ็ปต์แบรนด์กาแฟแนว ZEN” จะได้อะไรแปลกใหม่กว่าที่คิดแน่นอน"></textarea></td>
       </tr>
       <tr>
         <td><label for="reference">12. Reference: ขอแหล่งอ้างอิง</label></td>
-        <td><textarea rows="4" id="reference" placeholder="โปรดใส่แหล่งอ้างอิงด้วย..."></textarea></td>
+        <td><textarea rows="4" id="reference" placeholder="ถ้าเนื้อหาจริงจัง เช่น วิทยาศาสตร์ การเงิน การแพทย์ ให้เพิ่มว่า “โปรดใส่แหล่งอ้างอิงด้วย” เพื่อเพิ่มความน่าเชื่อถือ"></textarea></td>
       </tr>
       <tr>
         <td><label for="term">13. Term: นิยามคำเฉพาะ</label></td>
-        <td><textarea rows="4" id="term" placeholder="เช่น “RAG คือ...”"></textarea></td>
+        <td><textarea rows="4" id="term" placeholder="ถ้ามีศัพท์เฉพาะ เช่น “RAG คือ Retrieval-Augmented Generation” ให้ระบุไปเลย ระบบจะไม่ตีความผิด"></textarea></td>
       </tr>
       <tr>
         <td><label for="concise">14. Concise: เขียนให้กระชับ</label></td>
-        <td><textarea rows="4" id="concise" placeholder="เขียนสั้น ๆ ไม่เกิน 5 บรรทัด..."></textarea></td>
+        <td><textarea rows="4" id="concise" placeholder="สั่งให้ “เขียนสั้น ๆ ไม่เกิน 5 บรรทัด” หรือ “ย่อให้เหมาะกับแคปชั่น” จะช่วยให้โพสต์ลงโซเชียลหรือสไลด์ได้ทันที"></textarea></td>
       </tr>
       <tr>
         <td><label for="focus">15. Focus: ถามทีละเรื่อง</label></td>
-        <td><textarea rows="4" id="focus" placeholder="แยกเป็นข้อ ๆ เพื่อให้ละเอียด..."></textarea></td>
+        <td><textarea rows="4" id="focus" placeholder="อย่าถาหลายอย่างในพรอมพ์เดียว เช่น “ช่วยเขียนแผน+วิเคราะห์+สรุป+ทำสไลด์” — ให้แยกเป็นข้อ ๆ เพื่อได้คำตอบที่ละเอียดในแต่ละส่วน"></textarea></td>
       </tr>
       <tr>
         <td><label for="iterate">16. Iterate: ทดลองและปรับแต่ง</label></td>
-        <td><textarea id="iterate" rows="3" placeholder="ลองปรับคำใหม่ เพิ่มเงื่อนไข..."></textarea></textarea></td>
+        <td><textarea id="iterate" rows="3" placeholder="พรอมพ์แรกอาจยังไม่ใช่ ลองปรับคำใหม่ เพิ่มเงื่อนไข หรือขอให้ “ตอบอีกแบบที่แตกต่าง” ก็จะเจอคำตอบที่ถูกใจมากขึ้นเรื่อย ๆ"></textarea></textarea></td>
       </tr>
       <tr>
         <td colspan="2" class="form-buttons">
